# uncookd

./: README.md  RESTART_SERVER.md  TLDRAW_AGENT_ANALYSIS.md  TLDRAW_VERIFICATION.md  WHITEBOARD_TESTING.md  client-stub.ts  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/components/: AddUserModal.tsx  AgentProgressPanel.tsx  CrewAIExample.tsx  DesmosCalculator.tsx  DeviceConfigModal.tsx  Footer.tsx  Header.tsx  MeetingArea.tsx  MeetingChat.tsx  MeetingToolbar.tsx  MeetingUser.tsx  README_TLDRAW.md  TldrawAgentApp.tsx  TldrawBoard.tsx  TldrawBoardEmbedded.tsx  (+2 more)
crewai_backend/: .gitignore  AUDIO_SETUP.md  README.md  STUDY_HELP_USAGE.md  TESTING.md  agent_runner.py  cli_study_help.py  main.py  pyproject.toml  requirements.txt  run_server.py  server.py  start_server.sh  tempCodeRunnerFile.py  test_agent_interaction.py  test_tts_playback.py  test_whiteboard.py
crewai_backend/agents/: STUDY_HELP_USAGE.md  __init__.py  agent.py  example_agents.py
crewai_backend/agents/tools/: __init__.py  whiteboard_tool.py
crewai_backend/tests/: TESTING.md  cli_study_help.py  test_main.py  test_tts_playback.py
crewai_backend/tts/: __init__.py  tts.py
crewai_backend/utils/: __init__.py  text_utils.py  tts.py
crewai_backend/websocket/: AUDIO_SETUP.md  __init__.py  connection_manager.py
docs/: AI_AGENTS_TLDRAW.md
lib/: audio-websocket-client.ts  crewai-client.ts  tldraw-utils.ts
multi_agents_help/: README.md  pyproject.toml
multi_agents_help/src/multi_agents_help/: crew.py  main.py
shared/: AgentHelpers.ts  AgentUtils.ts  CompletionChecker.ts
worker/: models.ts
(+30 files in other folders)
