[project]
name = "crewai-backend"
version = "0.1.0"
description = "CrewAI backend service for multi-agent operations"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "crewai==0.80.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.2",
    "requests==2.31.0",
    "google-genai>=1.2.0",
]

